--- a/Pacemaker/app/build.gradle
+++ b/Pacemaker/app/build.gradle
@@ -29,9 +29,12 @@ dependencies {
     def applicationDependencies = rootProject.ext.mainApplication
     def unitTestDependencies = rootProject.ext.unitTesting
     def acceptanceTestDependencies = rootProject.ext.acceptanceTesting
+    def developmentDependencies = rootProject.ext.development
 
     // Application dependencies
     implementation applicationDependencies.kotlin
+    implementation applicationDependencies.kotlinCoroutines
+    implementation applicationDependencies.kotlinCoroutinesAndroid
     implementation applicationDependencies.appCompat
     implementation applicationDependencies.coreKtx
     implementation applicationDependencies.constraintLayout
@@ -64,4 +67,9 @@ dependencies {
     // Acceptance tests dependencies
     androidTestImplementation acceptanceTestDependencies.testJunit
     androidTestImplementation acceptanceTestDependencies.espressoCore
+
+    //Development dependencies
+    debugImplementation developmentDependencies.leakCanary
+    releaseImplementation developmentDependencies.leakCanaryNoop
+    testImplementation developmentDependencies.leakCanaryNoop
 }
