--- a/Pacemaker/buildsystem/dependencies.gradle
+++ b/Pacemaker/buildsystem/dependencies.gradle
@@ -25,7 +25,7 @@ ext {
     //glide_version = '4.0.0'
 
     //Third party libraries
-    //kotlin_coroutines_version = '0.22.1'
+    kotlin_coroutines_version = '1.3.2'
     dagger_version = '2.22'
     //javaxAnnotations_version = '1.0'
     //javaxInject_version = '1'
@@ -43,13 +43,13 @@ ext {
     espresso_version = '3.2.0'
 
     //Development
-    //leakCanaryVersion = '1.5'
+    leakCanaryVersion = '1.5'
 
     mainApplication = [
             //백업 코드 혹시 문제 있으면 이 코드 사용 "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
             kotlin:                      "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version",
-            //kotlinCoroutines:           "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines_version",
-            //kotlinCoroutinesAndroid:    "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version",
+            kotlinCoroutines:           "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlin_coroutines_version",
+            kotlinCoroutinesAndroid:    "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version",
             appCompat:                   "androidx.appcompat:appcompat:$appCompat_version",
             coreKtx:                     "androidx.core:core-ktx:$coreKtx_version",
             //cardView:                   "com.android.support:cardview-v7:$appCompat_version",
@@ -128,7 +128,7 @@ ext {
     ]
 
     development = [
-            //leakCanary:         "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}",
-            //leakCanaryNoop:     "com.squareup.leakcanary:leakcanary-android-no-op:${leakCanaryVersion}",
+            leakCanary:         "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}",
+            leakCanaryNoop:     "com.squareup.leakcanary:leakcanary-android-no-op:${leakCanaryVersion}",
     ]
 }
