--- a/Pacemaker/app/build.gradle
+++ b/Pacemaker/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation applicationDependencies.dagger
     implementation applicationDependencies.daggerSupport
     implementation applicationDependencies.daggerLegacy
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     kapt applicationDependencies.daggerProcessor
     kapt applicationDependencies.daggerCompiler
     implementation applicationDependencies.lifecycleExtensions
