--- a/Pacemaker/app/build.gradle
+++ b/Pacemaker/app/build.gradle
@@ -41,6 +41,12 @@ dependencies {
     implementation applicationDependencies.dagger
     implementation applicationDependencies.daggerSupport
     implementation applicationDependencies.daggerLegacy
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
     kapt applicationDependencies.daggerProcessor
     kapt applicationDependencies.daggerCompiler
     implementation applicationDependencies.lifecycleExtensions
