--- a/Pacemaker/buildsystem/dependencies.gradle
+++ b/Pacemaker/buildsystem/dependencies.gradle
@@ -21,6 +21,7 @@ ext {
     constraintLayout_version = '1.1.3'
     lifecycle_version = '2.1.0'
     room_version = '2.2.1'
+    material_version = '1.0.0'
     //archComponents_version = '1.1.1'
     //glide_version = '4.0.0'
 
@@ -56,6 +57,7 @@ ext {
             //recyclerView:               "com.android.support:recyclerview-v7:$appCompat_version",
             //design:                     "com.android.support:design:$appCompat_version",
             constraintLayout:            "androidx.constraintlayout:constraintlayout:$constraintLayout_version",
+            material:                    "com.google.android.material:material:$material_version",
             //androidAnnotations:         "com.android.support:support-annotations:$appCompat_version",
             //archComponents:             "android.arch.lifecycle:extensions:$archComponents_version",
             //archComponentsCompiler:     "android.arch.lifecycle:compiler:$archComponents_version",
