--- a/Pacemaker/app/build.gradle
+++ b/Pacemaker/app/build.gradle
@@ -43,6 +43,10 @@ dependencies {
     implementation applicationDependencies.daggerLegacy
     implementation applicationDependencies.material
     implementation applicationDependencies.admob
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
     kapt applicationDependencies.daggerProcessor
     kapt applicationDependencies.daggerCompiler
     implementation applicationDependencies.lifecycleExtensions
