--- a/Pacemaker/app/src/main/AndroidManifest.xml
+++ b/Pacemaker/app/src/main/AndroidManifest.xml
@@ -40,7 +40,8 @@
 
         <activity
             android:name=".features.pacemaker.PlayPopupActivity"
-            android:theme="@style/CustomAppTheme.Popup" />
+            android:theme="@style/CustomAppTheme.Popup"
+          /> <!-- android:theme="@style/CustomAppTheme.Popup" /> -->
 
     </application>
 
