--- a/Pacemaker/app/build.gradle
+++ b/Pacemaker/app/build.gradle
@@ -27,6 +27,7 @@ android {
 dependencies {
     //implementation fileTree(dir: 'libs', include: ['*.jar'])
     def applicationDependencies = rootProject.ext.mainApplication
+
     def unitTestDependencies = rootProject.ext.unitTesting
     def acceptanceTestDependencies = rootProject.ext.acceptanceTesting
     def developmentDependencies = rootProject.ext.development
@@ -43,6 +44,10 @@ dependencies {
     implementation applicationDependencies.daggerLegacy
     implementation applicationDependencies.material
     implementation applicationDependencies.admob
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0'
     kapt applicationDependencies.daggerProcessor
     kapt applicationDependencies.daggerCompiler
     implementation applicationDependencies.lifecycleExtensions
