--- a/Pacemaker/app/src/main/AndroidManifest.xml
+++ b/Pacemaker/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
             android:theme="@style/CustomAppTheme"/>
         <activity
             android:name=".features.pacemaker.PlayPopupActivity"
-            android:theme="@style/CustomAppTheme.Popup"/>
+            android:theme="@style/CustomAppTheme"/>
 
         <activity
             android:name=".features.pacemaker.OptionActivity"
