--- a/Pacemaker/build.gradle
+++ b/Pacemaker/build.gradle
@@ -3,15 +3,23 @@ apply from: 'buildsystem/dependencies.gradle'
 
 buildscript {
     ext.kotlin_version = '1.3.71'
-    ext.kotlin_version = '1.3.61'
+
     repositories {
         google()
         jcenter()
 
+        maven{
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.3'
+
+        // Add the Crashlytics Gradle plugin.
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.0.0-beta04'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -22,7 +30,6 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
-
     }
 }
 
