--- a/Pacemaker/app/src/main/AndroidManifest.xml
+++ b/Pacemaker/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application
         android:name=".AndroidApplication"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -60,6 +60,7 @@
             android:enabled="true"
             android:exported="true"
             android:stopWithTask="false"/>
+
     </application>
 
 </manifest>
