--- a/Pacemaker/app/build.gradle
+++ b/Pacemaker/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
     implementation applicationDependencies.daggerLegacy
     implementation applicationDependencies.material
     implementation applicationDependencies.admob
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     kapt applicationDependencies.daggerProcessor
     kapt applicationDependencies.daggerCompiler
     implementation applicationDependencies.lifecycleExtensions
