--- a/Pacemaker/app/src/main/AndroidManifest.xml
+++ b/Pacemaker/app/src/main/AndroidManifest.xml
@@ -15,8 +15,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/CustomSplashAppTheme">
-        <activity android:name=".features.pacemaker.AppFinishActivity"></activity>
-        <activity android:name=".features.pacemaker.FinishPopupActivity" /> <!-- Sample AdMob App ID: ca-app-pub-3940256099942544~3347511713 -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-3940256099942544~3347511713" />
@@ -59,6 +57,9 @@
         <activity
             android:name=".features.pacemaker.StatisticsActivity"
             android:theme="@style/CustomAppTheme" />
+
+        <activity android:name=".features.pacemaker.AppFinishActivity"/>
+
 
         <service
             android:name=".features.pacemaker.service.TimerService"
