--- a/Pacemaker/build.gradle
+++ b/Pacemaker/build.gradle
@@ -2,15 +2,16 @@
 apply from: 'buildsystem/dependencies.gradle'
 
 buildscript {
-    ext.kotlin_version = '1.3.71'
+    ext.kotlin_version = '1.3.72'
 
     repositories {
         google()
         jcenter()
-
+/*
         maven{
             url 'https://maven.fabric.io/public'
         }
+  */
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.0'
@@ -18,7 +19,7 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.3'
 
         // Add the Crashlytics Gradle plugin.
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.0.0-beta04'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.1.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
