--- a/Pacemaker/app/src/main/AndroidManifest.xml
+++ b/Pacemaker/app/src/main/AndroidManifest.xml
@@ -53,10 +53,13 @@
             android:name=".features.pacemaker.StatisticsActivity"
             android:theme="@style/CustomAppTheme" />
 
-        <activity android:name=".features.pacemaker.OpenSourceActivity"
-            android:theme="@style/CustomAppTheme"></activity>
+        <activity
+            android:name=".features.pacemaker.OpenSourceActivity"
+            android:theme="@style/CustomAppTheme"/>
 
-        <activity android:name=".features.pacemaker.TutorialActivity" />
+        <activity
+            android:name=".features.pacemaker.TutorialActivity"
+            android:theme="@style/CustomAppTheme"/>
 
         <service
             android:name=".features.pacemaker.service.TimerService"
