--- a/Pacemaker/buildsystem/dependencies.gradle
+++ b/Pacemaker/buildsystem/dependencies.gradle
@@ -11,7 +11,7 @@ ext {
     applicationId = "com.devjj.pacemaker"
     min_sdk = 24
     target_sdk = 33
-    version_code = 15
+    version_code = 16
     version_name = "1.3.1"
     test_runner = "androidx.test.runner.AndroidJUnitRunner"
 
@@ -19,16 +19,16 @@ ext {
     appCompat_version = '1.1.0'
     coreKtx_version = '1.1.0'
     constraintLayout_version = '1.1.3'
-    lifecycle_version = '2.1.0'
-    room_version = '2.2.1'
+    lifecycle_version = '2.5.1'
+    room_version = '2.5.2'
     material_version = '1.0.0'
-    admob_version = '19.3.0'
+    admob_version = '20.4.0'
     //archComponents_version = '1.1.1'
     //glide_version = '4.0.0'
 
     //Third party libraries
-    kotlin_coroutines_version = '1.3.2'
-    dagger_version = '2.22'
+    kotlin_coroutines_version = '1.7.3'
+    dagger_version = '2.48.1'
     //javaxAnnotations_version = '1.0'
     //javaxInject_version = '1'
     //retrofit_version = '2.3.0'
@@ -36,7 +36,7 @@ ext {
 
     //Unit Testing
     //robolectric_version = '3.8'
-    junit_version = '4.12'
+    junit_version = '4.13.2'
     //mockito_version = '1.4.0'
     //kluent_version = '1.14'
 
@@ -60,6 +60,7 @@ ext {
             constraintLayout:            "androidx.constraintlayout:constraintlayout:$constraintLayout_version",
             material:                    "com.google.android.material:material:$material_version",
             admob:                       "com.google.android.gms:play-services-ads:$admob_version",
+            admobLite:                   "com.google.android.gms:play-services-ads-lite:$admob_version",
             //androidAnnotations:         "com.android.support:support-annotations:$appCompat_version",
             //archComponents:             "android.arch.lifecycle:extensions:$archComponents_version",
             //archComponentsCompiler:     "android.arch.lifecycle:compiler:$archComponents_version",
@@ -69,8 +70,6 @@ ext {
             daggerLegacy:                'androidx.legacy:legacy-support-v4:1.0.0',
             daggerProcessor:             "com.google.dagger:dagger-android-processor:$dagger_version",
             daggerCompiler:              "com.google.dagger:dagger-compiler:$dagger_version",
-            // ViewModel and LiveData
-            lifecycleExtensions:         "androidx.lifecycle:lifecycle-extensions:$lifecycle_version",
             // alternatively - just ViewModel
             lifecycleViewModel:          "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version",
             // For Kotlin use lifecycle-viewmodel-ktx
